--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,13 +1,39 @@
 <h2>ToDo lista</h2>
-<ul>
-  <li *ngFor="let item of listaDoWykonania">{{item.nazwa}} <span (click)="usun(item)"  class="btn btn-danger">X</span> </li>
+<div class="row">
+  <div class="col-md">
+    <h3>Do wykonania</h3>
 
-</ul>
-<div >
-  <input class="formControl" [(ngModel)]="inputTekst">
+    <ul>
+      <li *ngFor="let item of listaDoWykonania">
+        {{ item.nazwa }}
+        <span (click)="usun(item)" class="btn btn-danger">X</span>
+        <span (click)="wykonane(item)" class="btn btn-info">V</span>
+      </li>
+    </ul>
+  </div>
+  <div class="col-md">
+      <h3>Wykonane</h3>
+
+      <ul>
+        <li *ngFor="let item of listaDoWykonania">
+          {{ item.nazwa }}
+          <span (click)="usun(item)" class="btn btn-danger">X</span>
+          <span (click)="wykonane(item)" class="btn btn-info">V</span>
+        </li>
+      </ul>
+
+  </div>
+</div>
+
+<div>
+  <input class="formControl" [(ngModel)]="inputTekst" />
   <button (click)="addToDo()" class="btn btn-success">Dodaj</button>
 </div>
 
 <div>
-    <input class="formControl" [(ngModel)]="wyszukaj" (keyup)="szukaj(wyszukaj)" >
+  <input
+    class="formControl"
+    [(ngModel)]="wyszukaj"
+    (keyup)="szukaj(wyszukaj)"
+  />
 </div>
